fix flex gap style

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -343,6 +343,7 @@ a {
                         .txt {
                             display: flex;
                             flex-direction: column;
+                            gap: 0;
                             .txt-bold {
                                 font-weight: 700;
                             }
